# ML-Tutor

./: .env.example  .gitignore  README.md  dataset.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  query.py
app/api/routes/: query.py
app/core/: config.py  exceptions.py  logging_config.py
app/models/: schemas.py  schemes.py
app/services/: document_loader.py  embedding_service.py  rag_chain.py  vector_store.py
backend/: extract_pdf.py
chroma_db/: chroma.sqlite3
chroma_db/315543c0-a029-477b-a38e-d821d12f9a68/: index_metadata.pickle
dataset/: dataset.txt
